--- a/views_mysql/delete.jade
+++ b/views_mysql/delete.jade
@@ -10,4 +10,9 @@ html
           li
             a(href='/topic/'+topic.id)= topic.title
       artcle
-        | Delete
+        h1= 'Will you delete ' + topic.title + '?'
+        form(action='/topic/'+topic.id+'/delete' method='post')
+          p
+            input(type='submit' value='YES')
+        a(href='/topic/'+topic.id) NO
+
